<resources>
    <string name="app_name">Bluffer</string>
    <string name="play">PLAY</string>
    <string name="ok">OK</string>
    <string name="start">START</string>
    <string name="next">NEXT</string>
    <string name="help_button">How to play guide</string>
    <string name="sound_setting_button">Change sound setting</string>
    <string name="how_to_play">How To Play?</string>
    <string name="about_game">About Game</string>
    <string name="close_button">CLOSE</string>
    <string name="internet_connectivity">No internet connection</string>
    <string name="player_names">Player Names</string>
    <string name="required">Required*</string>
    <string name="player_one">Player 1</string>
    <string name="player_two">Player 2</string>
    <string name="selected_player">selected player</string>
    <string name="timer_dummy">00:30</string>
    <string name="increase_time">+30 sec</string>
    <string name="image">Image</string>
    <string name="resume_text">Resume Game ?</string>
    <string name="truth">TRUTH</string>
    <string name="bluff">BLUFFED</string>
    <string name="check_result_1">DID YOU BLUFF?</string>
    <string name="check_result_2">WHAT DID THE OTHER PLAYER SAY ?</string>
    <string name="show_image">SHOW IMAGE</string>
    <string name="home">HOME</string>
    <string name="replay">REPLAY</string>
    <string name="exit">EXIT</string>
    <string name="ask_to_exit">DO YOU WANT TO EXIT GAME ?</string>
    <string name="yes">Yes</string>
    <string name="no">NO</string>
    <string name="cancel">Cancel</string>
    <string name="toast_enter_names">Enter Player Names!</string>
</resources>