<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#538EF7"
    tools:context=".ResultFragment">

    <!--    Player 1 Remarks-->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        style="@style/card_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:backgroundTint="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text="@string/check_result_1"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/explainer_bluff_button"
                style="@style/button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/green"
                android:text="@string/bluff"
                android:textColor="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/explainer_truth_button"
                style="@style/button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:backgroundTint="@color/green"
                android:text="@string/truth"
                android:textColor="@color/black" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <!--    Player 2 remarks-->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/result_card"
        style="@style/card_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:backgroundTint="@color/yellow"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text="@string/check_result_2"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/guesser_bluff_button"
                style="@style/button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/green"
                android:text="@string/bluff"
                android:textColor="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/guesser_truth_button"
                style="@style/button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:backgroundTint="@color/green"
                android:text="@string/truth"
                android:textColor="@color/black" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/congo_card"
        style="@style/card_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/yellow"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/greet_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text="@string/winner"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textSize="24sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/play_again_button"
                style="@style/button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:backgroundTint="@color/green"
                android:text="@string/play_again" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/exit_button"
        style="@style/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/red"
        android:text="@string/exit"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/congo_card" />


    <!--        Exit Game-->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/exit_card_view"
        style="@style/card_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:backgroundTint="@color/yellow"
        app:cardCornerRadius="12dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/exit_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text="@string/ask_to_exit"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/yes_button"
                    style="@style/button_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/red"
                    android:text="@string/exit"
                    android:textColor="@color/black" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel_button"
                    style="@style/button_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/green"
                    android:text="@string/cancel"
                    android:textColor="@color/black" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>